[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2.7"
env_logger = "0.10.0"
httparse = "1.8.0"
lazy_static = "1.4.0"
log = "0.4.17"
serde = "1.0.162"
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["net", "macros", "rt-multi-thread", "io-util", "io-std", "time"] }
