[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true

[dependencies]
argh = "0.1.10"
bstr = "1.5.0"
env_logger = "0.10.0"
httparse = "1.8.0"
lazy_static = "1.4.0"
log = "0.4.17"
md5 = "0.7.0"
rand = "0.8.5"
rustls = { version = "0.21.1", path = "../../rustls/rustls" }
rustls-pemfile = "1.0.2"
serde = "1.0.162"
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["net", "macros", "rt-multi-thread", "io-util", "io-std", "time"] }
tokio-rustls = { version = "0.24.0", path = "../../tokio-tls/tokio-rustls" }
webpki-roots = "0.23.0"
